--- a/demo/index.html
+++ b/demo/index.html
@@ -25,18 +25,18 @@
       <h3>Buttons can be flat, toggable, or disabled</h3>
       <demo-snippet>
         <template>
-          <anypoint-button>click</anypoint-button>
-          <anypoint-button toggles>click</anypoint-button>
-          <anypoint-button disabled>click</anypoint-button>
+          <anypoint-button>Click</anypoint-button>
+          <anypoint-button toggles>Click</anypoint-button>
+          <anypoint-button disabled>Click</anypoint-button>
         </template>
       </demo-snippet>
 
       <h3>Buttons can be styled</h3>
       <demo-snippet>
         <template>
-          <anypoint-button class="styled">click</anypoint-button>
-          <anypoint-button class="styled" toggles>click</anypoint-button>
-          <anypoint-button class="styled" disabled>click</anypoint-button>
+          <anypoint-button class="styled">Click</anypoint-button>
+          <anypoint-button class="styled" toggles>Click</anypoint-button>
+          <anypoint-button class="styled" disabled>Click</anypoint-button>
           <custom-style>
             <style>
             .styled {
@@ -53,6 +53,26 @@
             }
             </style>
           </custom-style>
+        </template>
+      </demo-snippet>
+
+      <h3>Default theme buttons</h3>
+      <demo-snippet>
+        <template>
+          <anypoint-button type="primary">Click</anypoint-button>
+          <anypoint-button type="secondary">Click</anypoint-button>
+          <anypoint-button type="tertiary">Click</anypoint-button>
+          <anypoint-button type="danger">Click</anypoint-button>
+        </template>
+      </demo-snippet>
+
+      <h3>Default theme buttons that toggles</h3>
+      <demo-snippet>
+        <template>
+          <anypoint-button type="primary" toggles>Click</anypoint-button>
+          <anypoint-button type="secondary" toggles>Click</anypoint-button>
+          <anypoint-button type="tertiary" toggles>Click</anypoint-button>
+          <anypoint-button type="danger" toggles>Click</anypoint-button>
         </template>
       </demo-snippet>
     </div>
