chore: moving styles to a separate files

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,9 +38,34 @@
     height: 24px;
   }
   </style>
+  <custom-style>
+    <style class="document-style">
+    html {
+      --anypoint-color-robustBlue1: red;
+    }
+    </style>
+  </custom-style>
+
 </head>
 <body class="styled">
   <div id="demo"></div>
   <script type="module" src="./index.js"></script>
+
+  <script>
+  document.addEventListener('WebComponentsReady', function() {
+    function shouldAddDocumentStyle(n) {
+      return n.nodeType === Node.ELEMENT_NODE && n.localName === 'style' && !n.hasAttribute('scope');
+    }
+    const CustomStyleInterface = window.ShadyCSS.CustomStyleInterface;
+
+    const candidates = document.querySelectorAll('style');
+    for (let i = 0; i < candidates.length; i++) {
+      const candidate = candidates[i];
+      if (shouldAddDocumentStyle(candidate)) {
+        CustomStyleInterface.addCustomStyle(candidate);
+      }
+    }
+  });
+  </script>
 </body>
 </html>
